Refactor DriverManager and related classes to enhance order management functionality. Remove deprecated configuration files and address Java compilation errors, including missing method implementations and symbol resolutions. Update Order and MenuItem classes to ensure compliance with interface requirements. Improve import organization and method clarity across multiple files for better maintainability and readability.